--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/updateFragment"
-        android:name="com.artistecomm.update.UpdateFragment"
+        android:name="com.artistecomm.fragments.update.UpdateFragment"
         android:label="Update"
         tools:layout="@layout/fragment_update" >
         <action
